--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="animated zoomIn">
             <h1>Xetrics</h1>
             <h3>full stack web dev | reverse engineer | software development</h3>
-            <a href="https://github.com/Xetrics/"><i class="fa fa-github"></i></a><a href="twitter.com/Xetrics"><i class="fa fa-twitter"></i></a><a href="https://hackforums.net/member.php?action=profile&uid=2932817"><span>HF</span></a><a href="steamcommunity.com/id/xetrics"><i class="fa fa-steam"></i></a><a href="https://v3rmillion.net/member.php?action=profile&uid=23"><span>V3</span></a><a href="https://hatscripts.com/addskype?backtrack.exe"><i class="fa fa-skype"></i></a>
+            <a href="https://github.com/Xetrics/"><i class="fa fa-github"></i></a><a href="http://twitter.com/Xetrics"><i class="fa fa-twitter"></i></a><a href="https://hackforums.net/member.php?action=profile&uid=2932817"><span>HF</span></a><a href="http://steamcommunity.com/id/xetrics"><i class="fa fa-steam"></i></a><a href="https://v3rmillion.net/member.php?action=profile&uid=23"><span>V3</span></a><a href="https://hatscripts.com/addskype?backtrack.exe"><i class="fa fa-skype"></i></a>
             <p><i class="fa fa-bitcoin"></i>  1BAvM1YEHsJJpHNcuPgxjd6ZPjRWBiEJ6v</p>
         </div>
     </div>
